Fix spacing for announcements

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,8 @@
-body {
-    
-}
-
 .container {
     display:grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: 20% 80%;
-    height:100%;
+    height:100vh;
 }
 
 .headercontainer {
@@ -25,6 +21,7 @@ body {
     border-style: dashed;
     display:grid;
     grid-template-columns: 3fr 1fr;
+   
 }
 
 .Dashboard {
@@ -35,4 +32,17 @@ body {
     border-style: dashed;
  
     
+}
+
+.Projects {
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
+}
+
+.Announcetrendcontainer {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+ 
 }
